# inf443_opengl_introduction

./: README.md
attributes/attributes_buffer_stack/: Makefile  README  meson.build
attributes/attributes_buffer_stack/shaders/: fragment_shader.glsl
attributes/attributes_buffer_stack/src/: main.cpp  opengl_helper.hpp
attributes/attributes_interleaved/: CMakeLists.txt
attributes/attributes_interleaved/src/: main.cpp  window_helper.cpp
attributes/attributes_multiple_vbo/: Makefile
attributes/attributes_multiple_vbo/shaders/: vertex_shader.glsl
attributes/attributes_multiple_vbo/src/: main.cpp  opengl_helper.hpp  window_helper.hpp
attributes/fragment_shader_attribute/: CMakeLists.txt
attributes/fragment_shader_attribute/shaders/: fragment_shader.glsl  vertex_shader.glsl
attributes/fragment_shader_attribute/src/: main.cpp
create_window/: Makefile  README  meson.build
create_window/src/: main.cpp
create_window_opengl_context/: CMakeLists.txt  Makefile  meson.build
create_window_opengl_context/src/: main.cpp
indexing/src/: main.cpp  opengl_helper.cpp
minimal_opengl_triangle/: Makefile  meson.build
minimal_opengl_triangle/src/: main.cpp
uniforms/shaders/: vertex_shader.glsl
uniforms/src/: main.cpp  opengl_helper.hpp
